# lyric-generation

./: .gitignore  README.md  generate.sh  prepare.sh  pyproject.toml  train.sh
src/: data.py  generate.py  model.py  tokenizer.py  train.py
src/preprocess/: make_dataset.py  pretokenize.py  spm_train.py
